# liquid

./: .gitignore  Cargo.toml  README.md  example.lqd  example2.lqd  print_hello_world.c  test.nu
crates/frontend/: Cargo.toml
crates/frontend/src/: bin_op.rs  block.rs  expr.rs  function.rs  identifier.rs  lib.rs  literal.rs  node.rs  token.rs  top.rs  var.rs  var_assign.rs
crates/lqdc/: Cargo.toml
crates/lqdc-codegem/: Cargo.toml
crates/lqdc-codegem/benches/: benchmark.lqd  full_parse_and_compile.rs
crates/lqdc-codegem/src/: codegen.rs  lib.rs  main.rs  make_signatures.rs  parsepass.rs  type_.rs  type_check.rs
crates/lqdc-common/: Cargo.toml
crates/lqdc-common/src/: codepass.rs  lib.rs  linkage.rs  make_signatures.rs  parsepass.rs  type_.rs  type_check.rs
crates/lqdc-cranelift/: Cargo.toml
crates/lqdc-cranelift/src/: func_compiler.rs  lib.rs  main.rs
crates/lqdc-urcl/: Cargo.toml
crates/lqdc-urcl/src/: main.rs
crates/lqdc/src/: lib.rs  main.rs
crates/lqdc/src/codegem/: mod.rs
crates/lqdc/src/cranelift/: func_compiler.rs  mod.rs
result/: example.s  output.urcl
