[package]
edition = "2021"
name    = "lqdc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend = { path = "../frontend" }

clap.workspace        = true
lang_pt.workspace     = true
lazy_static.workspace = true
miette                = { workspace = true, features = ["fancy"] }
thiserror.workspace   = true

# Codegem imports
codegem = { workspace = true, optional = true }

# Cranelift imports
cranelift        = { version = "0.91", optional = true }
cranelift-module = { version = "0.91", optional = true }
cranelift-object = { version = "0.91", optional = true }

[features]
all     = ["backend_codegem", "backend_cranelift"]
default = ["backend_codegem"]

backend_codegem   = ["dep:codegem"]
backend_cranelift = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-object"]
