[package]
edition = "2021"
name    = "lqdc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace      = true
miette.workspace    = true
thiserror.workspace = true

chrono       = "0.4.23"
lqdc-codegem = { path = "../lqdc-codegem" }
lqdc-common  = { path = "../lqdc-common" }

[features]
default = ["clang"]

clang = []
gcc   = []
